# dance-to-beat

./: .gitignore  README.md  circle_image.py  debug_band_colors.py  debug_concentric_circles.py  pyproject.toml  requirements.txt  rotate_to_beat.py  rotate_to_beat_cli.py  run.sh  setup.py  test_colors.py
.github/workflows/: ci.yml
docs/: features.md  refactoring_plan.md
examples/: actual_lyrics.json  generate_sample_subtitles.py  sample_lyrics.json  sample_subtitles.json  subtitle_demo.py  transcribe_audio.py  transcribe_with_api.py
src/audio/: audio_utils.py  beat_detection.py  bpm_detection.py  multi_band.py
src/config/: audio_config.py
src/utils/: beat_visualizer.py  colors_visiualizer.py  gpu_utils.py  logging_config.py  subtitle_generator.py
src/video/: color_utils.py  color_wheel_state.py  frame_generator.py  rotation.py  subtitles.py
tests/: test_audio.py  test_audio_utils.py  test_cli.py  test_integration.py  test_multi_band.py  test_video.py
