[project]
name = "video-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.9.0",
    "matplotlib>=3.10.3",
    "moviepy>=1.0.3",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
]

[tool.setuptools]
packages = [
    "src",
]
